--- a/views/partials/home/home-nav.handlebars
+++ b/views/partials/home/home-nav.handlebars
@@ -28,6 +28,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/register">register</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="/admin">admin</a>
+            </li>
           </ul>
         </div>
       </div>
